[*]: Explain of code has been added.

--- a/Exercises_01/create_numpy_array.ipynb
+++ b/Exercises_01/create_numpy_array.ipynb
@@ -123,7 +123,7 @@
    "id": "4f8b3767-6097-465b-a530-270df6d94443",
    "metadata": {},
    "source": [
-    "In this function, a one-dimensional numpy array is created using the matrix values received from the user. Then, by using the r function, resizing is done according to the row and column values entered by the user at the beginning of the program. Thus, a matrix is created with the size and values that the user wants."
+    "In this function, a one-dimensional numpy array is created using the matrix values received from the user. Then, by using the **\"reshape\"** function, resizing is done according to the row and column values entered by the user at the beginning of the program. Thus, a matrix is created with the size and values that the user wants."
    ]
   },
   {
