[*]: Explain of code has been updated.

--- a/Exercises_01/create_numpy_array.ipynb
+++ b/Exercises_01/create_numpy_array.ipynb
@@ -5,7 +5,7 @@
    "id": "1f7bb28d-0e7e-4ba6-945a-52f07687f34c",
    "metadata": {},
    "source": [
-    "## Creating User Interactive Numpy Array"
+    "## Creating a User Interactive Numpy Array"
    ]
   },
   {
