[*]: Explain of code has been updated.

--- a/Exercises_01/create_numpy_array.ipynb
+++ b/Exercises_01/create_numpy_array.ipynb
@@ -44,7 +44,7 @@
    "id": "7bf2f665-724e-4d6f-b006-20ed247b4ed4",
    "metadata": {},
    "source": [
-    "The data received from the user send to the method named **\"r_number\"**. </br>\n",
+    "The data received from the user send to the method named **\"r_number\"**. <br/>\n",
     "First of all, it is checked whether the value in the function is an integer. If the value is an integer value, the function returns 0. If the value is not an integer, it is checked whether it is a float or not. If this condition is not met, it is checked whether the value is a string or not. If the entered value is of type float or string, an error message is displayed and the function returns 1. This process is repeated until the user enters the desired type of value."
    ]
   },
