[*]: Explain of code has been added.

--- a/Exercises_01/create_numpy_array.ipynb
+++ b/Exercises_01/create_numpy_array.ipynb
@@ -75,7 +75,7 @@
    "id": "a158661d-fdf0-4146-9365-2baed5a01a06",
    "metadata": {},
    "source": [
-    "If the user has entered the row and column values of the desired type, the code branches into the **\"createNumPyArray\"** function. </br> The user is prompted to enter the matrix values. This is process done with a nested for loop. With the other for loop, the type numbers of the values entered by the user are obtained. If the user has entered even one str type value, the data type of the matrix is set to str. The same is true for the float type. After this function, the code branches into the **\"writeArray\"** function."
+    "If the user has entered the row and column values of the desired type, the code branches into the **\"createNumPyArray\"** function. <br/> The user is prompted to enter the matrix values. This is process done with a nested for loop. With the other for loop, the type numbers of the values entered by the user are obtained. If the user has entered even one str type value, the data type of the matrix is set to str. The same is true for the float type. After this function, the code branches into the **\"writeArray\"** function."
    ]
   },
   {
