[*]: Explain of code has been updated.

--- a/Exercises_02/methods_create_numpy_array.ipynb
+++ b/Exercises_02/methods_create_numpy_array.ipynb
@@ -29,8 +29,8 @@
     "```\n",
     "**Example_3:** Create a 10 elements array with all elements zeros. Let the array be created from 3 rows and 5 columns.\n",
     "```python\n",
-    "import numpy as np\n",
-    "print(np.zeros((3,5),dtype=\"int\"))\n",
+    "```import numpy as np\n",
+    "```print(np.zeros((3,5),dtype=\"int\"))\n",
     "```"
    ]
   },
