--- a/Exercises_02/methods_create_numpy_array.ipynb
+++ b/Exercises_02/methods_create_numpy_array.ipynb
@@ -5,7 +5,7 @@
    "id": "144aacd8-ebaa-4545-83d8-9a7e513c4746",
    "metadata": {},
    "source": [
-    "## Methods of Create NumPy Array\n",
+    "## Methods of Creating NumPy Array\n",
     "### .Method_1: np.zeros()\n",
     "**np.zeros():** This method use for create a array with all elements are zero.<br/>\n",
     "**Example_1:** Create a 10 elements array with all elements zeros."
